# devshelf

./: README.md  config.yaml  pyproject.toml
code_registry/: cli.py  config.py  git_service.py  github_service.py  main.py  markdown_service.py
code_registry/static/: index.html
code_registry/static/css/: style.css
code_registry/static/js/: app.js
